--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
 body {
-  min-height: 2000px;
-  padding-top: 70px;
+  min-height: 1000px;
+  padding-top: 80px;
 }
 
-#weather {
-	font-size: 100px;
+.jumbotron-white {
+	background-color: #fff;
+}
+
+#myChart {
+	padding: 20px 40px 20px 40px;
+}
+
+#donutChart {
+	padding: 60px;
 }
