--- a/src/App.css
+++ b/src/App.css
@@ -9,102 +9,110 @@ body {
 .jumbotron-white {
 	background-color: #fff;
 }
+.jumbotron-search {
+  height: 280px;
+}
 
 #barChart {
 	padding: 20px 40px 20px 40px;
 }
 
-#donutChart {
-	padding: 60px;
+#donutChart, #polarChart {
+	padding: 40px;
+}
+.nav-pills {
+  margin-bottom: 20px;
+}
+.progress-last {
+  margin-bottom: 0px;
+}
+.active {
+  font-size: 10px;
+}
+.nav-tabs>li.active>a:focus {
+  color: white;
+}
+.nav>li>a.progress-t { 
+  padding: 5px 10px;
+  background-color: #4BC0C0;
+  color: white;
+}
+.nav>li>a.progress-w { 
+  padding: 5px 10px;
+  background-color: #FF6384;
+  color: white;
+}
+.nav>li>a.progress-h { 
+  padding: 5px 10px;
+  background-color: #36A2EB;
+  color: white;
+}
+.nav>li>a.progress-c { 
+  padding: 5px 10px;
+  background-color: #9966FF;
+  color: white;
 }
 
-.spinner {
-  /*margin: 100px auto 0;*/
-/*  padding-top: 10%;
-  margin-left: 50%;*/
-  width: 70px;
-  text-align: center;
-  vertical-align: center;
+.nav>li>a.progress-t:hover { 
+  cursor: default;
+  background-color: #4BC0C0;
 }
-
-.spinner > div {
-  width: 18px;
-  height: 18px;
-  background-color: #D7ECFB;
-
-  border-radius: 100%;
-  display: inline-block;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+.nav>li>a.progress-w:hover { 
+  cursor: default;
+  background-color: #FF6384;
 }
-
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
+.nav>li>a.progress-h:hover { 
+  cursor: default;
+  background-color: #36A2EB;
 }
-
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
+.nav>li>a.progress-c:hover { 
+  cursor: default;
+  background-color: #9966FF;
 }
-
-@-webkit-keyframes sk-bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0) }
-  40% { -webkit-transform: scale(1.0) }
+.pager .next>a {
+  float: none;
 }
-
-@keyframes sk-bouncedelay {
-  0%, 80%, 100% { 
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  } 40% { 
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
-  }
+.pager li>a {
+  color: #757575;
+  font-size: 14px;
 }
-
-.spin {
-	padding-left: 270px;
-	padding-top: 150px;
-}
-
 .timeline-item {
-    background: #fff;
-    border: 1px solid;
-    border-color: #E7E7E7;
-    border-radius: 3px;
-    padding: 12px;
+  background: #fff;
+  border: 1px solid;
+  border-color: #E7E7E7;
+  border-radius: 3px;
+  padding: 12px;
 
-    margin: 0 auto;
-    /*max-width: 472px;*/
-    min-height: 250px;
+  margin: 0 auto;
+  /*max-width: 472px;*/
+  /*min-height: 250px;*/
 }
 
 @keyframes placeHolderShimmer{
-    0%{
-        background-position: -468px 0
-    }
-    100%{
-        background-position: 468px 0
-    }
+  0%{
+      background-position: -468px 0
+  }
+  100%{
+      background-position: 468px 0
+  }
 }
 
 .animated-background {
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: placeHolderShimmer;
-    animation-timing-function: linear;
-    background: #f6f7f8;
-    background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
-    background-size: 800px 104px;
-    height: 96px;
-    position: relative;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: #f6f7f8;
+  background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+  background-size: 800px 104px;
+  height: 96px;
+  position: relative;
 }
 
 .background-masker {
-    background: #fff;
-    position: absolute;
+  background: #fff;
+  position: absolute;
 }
 
 /* Every thing below this is just positioning */
@@ -112,48 +120,48 @@ body {
 .background-masker.header-top,
 .background-masker.header-bottom,
 .background-masker.subheader-bottom {
-    top: 0;
-    left: 40px;
-    right: 0;
-    height: 10px;
+  top: 0;
+  left: 40px;
+  right: 0;
+  height: 10px;
 }
 
 .background-masker.header-left,
 .background-masker.subheader-left,
 .background-masker.header-right,
 .background-masker.subheader-right {
-    top: 10px;
-    left: 40px;
-    height: 8px;
-    width: 10px;
+  top: 10px;
+  left: 40px;
+  height: 8px;
+  width: 10px;
 }
 
 .background-masker.header-bottom {
-    top: 18px;
-    height: 6px;
+  top: 18px;
+  height: 6px;
 }
 
 .background-masker.subheader-left,
 .background-masker.subheader-right {
-    top: 24px;
-    height: 6px;
+  top: 24px;
+  height: 6px;
 }
 
 
 .background-masker.header-right,
 .background-masker.subheader-right {
-    width: auto;
-    left: 300px;
-    right: 0;
+  width: auto;
+  left: 300px;
+  right: 0;
 }
 
 .background-masker.subheader-right {
-    left: 230px;
+  left: 230px;
 }
 
 .background-masker.subheader-bottom {
-    top: 30px;
-    height: 10px;
+  top: 30px;
+  height: 10px;
 }
 
 .background-masker.content-top,
@@ -162,40 +170,45 @@ body {
 .background-masker.content-second-end,
 .background-masker.content-third-end,
 .background-masker.content-first-end {
-    top: 40px;
-    left: 0;
-    right: 0;
-    height: 6px;
+  top: 40px;
+  left: 0;
+  right: 0;
+  height: 6px;
 }
 
 .background-masker.content-top {
-    height:20px;
+  height:20px;
 }
 
 .background-masker.content-first-end,
 .background-masker.content-second-end,
 .background-masker.content-third-end{
-    width: auto;
-    left: 380px;
-    right: 0;
-    top: 60px;
-    height: 8px;
+  width: auto;
+  left: 380px;
+  right: 0;
+  top: 60px;
+  height: 8px;
 }
 
 .background-masker.content-second-line  {
-    top: 68px;
+  top: 68px;
 }
 
 .background-masker.content-second-end {
-    left: 420px;
-    top: 74px;
+  left: 420px;
+  top: 74px;
 }
 
 .background-masker.content-third-line {
-    top: 82px;
+  top: 82px;
 }
 
 .background-masker.content-third-end {
-    left: 300px;
-    top: 88px;
+  left: 300px;
+  top: 88px;
+}
+
+#chartdiv {
+  width: 100%;
+  height: 500px;
 }
